<resources>
    <string name="app_name">Apla Business</string>
    <string name="title_home">Home</string>
    <string name="title_product">Product</string>
    <string name="hint_product">Search Product</string>
    <string name="title">title</string>
    <string name="title_order">Order</string>
    <string name="title_account">Account</string>
    <string name="title_setting">Setting</string>
    <string name="title_other">Other</string>
    <string name="title_upi_payment_link">UPI Payment Link</string>
    <string name="title_recommended_printer">Recommended Printer</string>
    <string name="title_manage_staff">Manage Staff</string>
    <string name="title_account_settings">Account Settings</string>
    <string name="title_app_settings">App Settings</string>
    <string name="title_business_card">Business Card</string>
    <string name="title_share_your_ads">Share your ads on Social media</string>
    <string name="title_rate_us">Rate Us</string>
    <string name="title_share">Share</string>
    <string name="title_about">About</string>
    <string name="noNetworkFound">Internet Connection Not Found</string>
    <string name="dialog_ok_btn">ok</string>
</resources>