<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.prishan.aplabusiness.ui.bottomnav.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/home_fragment" />

    <fragment
        android:id="@+id/navigation_product"
        android:name="com.prishan.aplabusiness.ui.bottomnav.product.ProductMainFragment"
        android:label="@string/title_product"
        tools:layout="@layout/product_main_fragment" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.prishan.aplabusiness.ui.bottomnav.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/order_fragment" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.prishan.aplabusiness.ui.bottomnav.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/account_fragment" />
</navigation>